# Spegetti-GUI

./: .gitignore  CMakeLists.txt
Headers/: Spegetti_GUI.h
Sources/: Spegetti_GUI.cpp
